Resumable batch mode (#238)
* replace batch-mode 'filter' option with 'resume', introduce persistent batch state

* refactor dataset: put all data in a list of 'entries', delay binary loading when necessary

* extract (Batch)Dataset and BatchState out of Batch2.java

* explode Batch2.process() + fix/clean-up BatchDataset+BatchState

* confirm stateless/transient nature of some subgraph detectors, when connected to Cassandra DB (i.e. all state data is in DB)

* Unit tests for BatchState

* fix reflection warning from KamResourceLoader and gitignore generated data files when running server from IDE

* BatchDataset: only final fields

* update comment

Co-authored-by: Emmanuel Giasson <emmanuel.giasson@thalesgroup.com>